--- a/base.css
+++ b/base.css
@@ -9,13 +9,28 @@ nav {
     box-shadow: 0px 5px 3px grey;
 }
 
-.wrapper {
+.page {
     background-color: #ffffff;
     box-shadow: 5px 5px 3px grey;
-    margin: auto;
-    margin-top: 20px;
     width: 60%;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.wrapper {
     padding: 20px;
+    padding-top: 20px;
+}
+
+.tablink {
+    background-color: #dddddd;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 50%;
 }
 
 footer {
